# gerando-codigos-com-ia

./: README.md  pyproject.toml
src/: concatena_strings.py  operacoes_matematicas.py  repete_textos.py
