[project]
name = "gerando-codigos-with-gemini"
version = "0.1.0"
description = ""
authors = [
    {name = "erimendes",email = "eri.mendes32@mail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "gerando_codigos_with_gemini", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
